--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,44 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.section-padding {
+  @apply px-6 md:px-0 flex flex-col items-center justify-center overflow-x-hidden;
+}
+
+.text-primary {
+  @apply text-[#1e90ff];
+}
+
+.border-primary {
+  @apply border-[#1e90ff];
+}
+
+.bg-card {
+  @apply md:bg-[#232b2b] md:border md:border-stone-50;
+}
+
+.bg-secondary {
+  @apply bg-[#232b2b]
+}
+
+.btn-primary {
+  @apply bg-[#1e90ff];
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
+/* Add this to your global CSS file or a specific CSS module */
+.particles-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Ensure it is behind other content */
+  pointer-events: none; /* Allow clicks to pass through */
+}
