--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.section-padding {
-  @apply px-6 md:px-0 flex flex-col items-center justify-center overflow-x-hidden;
 }
 
 .text-primary {
@@ -32,16 +15,20 @@ body {
   @apply border-[#1e90ff];
 }
 
-.bg-card {
-  @apply md:bg-[#232b2b] md:border md:border-stone-50;
-}
-
 .bg-secondary {
   @apply bg-[#232b2b]
 }
 
 .btn-primary {
-  @apply bg-[#1e90ff];
+  @apply bg-[#1e90ff] border border-white rounded-full;
+}
+
+.border-half {
+  border-width: 0.5px;
+}
+
+.container-padding {
+  @apply px-5
 }
 
 @media (prefers-color-scheme: dark) {
@@ -50,13 +37,12 @@ body {
   }
 }
 
-/* Add this to your global CSS file or a specific CSS module */
 .particles-background {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Ensure it is behind other content */
-  pointer-events: none; /* Allow clicks to pass through */
+  z-index: -1;
+  pointer-events: none;
 }
