--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Source Sans 3', sans-serif;
+  font-weight: 400;
+}
+
+.light-font {
+  font-family: 'Source Sans 3', sans-serif;
+  font-weight: 300;
+}
+
+.heavy-font {
+  font-family: 'Source Sans 3', sans-serif;
+  font-weight: 600;
+}
+
+.serif-font {
+  font-family: 'Playfair Display', serif;
+  font-weight: 400;
 }
 
 .bg-selected {
